Fix "cut off" button text in Controller.
Caused by a different version of "Play" font.

In future, Polychromatic will always bundle the play font as
Ubuntu/Debian's "fonts-play" package contains the problematic font.

--- a/source/data/controller.less
+++ b/source/data/controller.less
@@ -607,7 +607,7 @@ input[type="radio"] {
     display: inline-block;
     padding: 4px 16px;
     font-size: 14px;
-    line-height: 20px;
+    line-height: 0;
     vertical-align: middle;
     text-decoration: none;
     text-align: center;
